PARTIAL FIX FOR NAVBAR ON MOBILE
I have partially fixed the navbar issue for mobile where the dropdown
content stretches off screen.

--- a/resources/amias_burrows.css
+++ b/resources/amias_burrows.css
@@ -7,6 +7,7 @@ body{
 #MyPicture{
 	grid-column: 5;
 	border-radius: 50%;
+	display: flex;
 }
 
 #MainTitle{
@@ -44,4 +45,10 @@ h4 {
 .paddingRemove{
 	padding-left: 0;
 	padding-right: 0;
+}
+
+@media (max-width: 600px){
+	#navbar {
+		overflow-y: scroll;
+	}
 }
